--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "acsd-assignment-4-mikita-krahelski",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "This respository is intended for the use of Focus College Students enrolled in the Advanced Certificate of Software Development located in Kelowna, BC and Surrey, BC.",
   "main": "index.js",
   "scripts": {
     "prestart": "tsc",
     "start": "node dist/index.js",
     "build": "npm run start",
+    "lint": "eslint src/**/*.ts --ext .ts",
+    "build:devkit": "eslint src/**/*.ts --ext .ts && npm run start",
+
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +23,9 @@
   },
   "homepage": "https://github.com/mkrahelski/developing-software-intro-assignment-4#readme",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^4.3.0",
+    "@typescript-eslint/parser": "^4.3.0",
+    "eslint": "^7.10.0",
     "typescript": "^4.0.3"
   }
 }
