--- a/.eslintrc
+++ b/.eslintrc
@@ -1,19 +1,14 @@
 {
-    "root": true,
-    "parser": "@typescript-eslint/parser",
-    "plugins": [
-      "@typescript-eslint"
-    ],
-    "extends": [
-      "eslint:recommended",
-      "plugin:@typescript-eslint/eslint-recommended",
-      "plugin:@typescript-eslint/recommended"
-    ],
+  "root": true,
+  "parser": "@typescript-eslint/parser",
+  "plugins": ["@typescript-eslint"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended"
+  ],
 
-    "rules": 
-        { 
-        "no-console": 1 // Remember, this means warning! while 2 is error!
-        }
-    
+  "rules": {
+    "no-console": 1 // Remember, this means warning! while 2 is error!
   }
-  
+}
