--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "acsd-assignment-4-mikita-krahelski",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "description": "This respository is intended for the use of Focus College Students enrolled in the Advanced Certificate of Software Development located in Kelowna, BC and Surrey, BC.",
   "main": "index.js",
   "scripts": {
@@ -8,9 +8,10 @@
     "start": "node dist/index.js",
     "build": "npm run start",
     "lint": "eslint src/**/*.ts --ext .ts",
-    "format": "prettier src/**/*.ts --write", 
-    "build:devkit": "eslint src/**/*.ts --ext .ts && prettier src/**/*.ts --write && npm run start",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "format": "prettier src/**/*.ts --write",
+    "test": "mocha -r ts-node/register src/**/*.ts",
+    "build:devkit": "eslint src/**/*.ts --ext .ts && prettier src/**/*.ts --write && mocha -r ts-node/register src/**/*.ts && npm run start"
+
   },
   "repository": {
     "type": "git",
@@ -23,10 +24,15 @@
   },
   "homepage": "https://github.com/mkrahelski/developing-software-intro-assignment-4#readme",
   "devDependencies": {
+    "@types/chai": "^4.2.12",
+    "@types/mocha": "^8.0.3",
     "@typescript-eslint/eslint-plugin": "^4.3.0",
     "@typescript-eslint/parser": "^4.3.0",
+    "chai": "^4.2.0",
     "eslint": "^7.10.0",
+    "mocha": "^8.1.3",
     "prettier": "2.1.2",
+    "ts-node": "^9.0.0",
     "typescript": "^4.0.3"
   }
 }
